--- a/Carcare_Pro2/dashboard/loginadmin.html
+++ b/Carcare_Pro2/dashboard/loginadmin.html
@@ -16,12 +16,12 @@ if (isset($_POST['login'])) {
     setcookie('user', $u, time() + (86400 * 30), "/"); // 86400 = 1 day
 	setcookie('id', $mid, time() + (86400 * 30), "/");
     echo "<script >
-      window.location='index.php';
+      window.location='index.html';
       </script>";
   }else {
     echo "<script>
         alert('ชื่อผู้ใช้หรือรหัสผ่านไม่ถูกต้อง!');
-        window.location='login.php';;
+        window.location='login.html';;
         </script>";
   }
 }
